--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Geo for Bootstrap, a Timeless Theme by Divshot</title>
     <center>
-      <img style="transform: scaleX(1);" src="img/furbyANIMADO.gif">&nbsp;&nbsp;</img>
+      <img style="transform: scaleX(1); border: 2px solid #f1fa8c" src="img/furbyANIMADO.gif">&nbsp;&nbsp;</img>
       <a class="btn btn-large" href="#"><img src="img/logo-2.jpg" title="Northeast Wisconsin Furby Enthusiast Group"></img></a>
-      &nbsp;&nbsp;<img style="transform: scaleX(-1);" src="img/furbyANIMADO.gif"></img>
+      &nbsp;&nbsp;<img style="transform: scaleX(-1); border: 2px solid #8be9fd" src="img/furbyANIMADO.gif"></img>
     </center>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A timeless theme for Twitter Bootstrap.">
@@ -53,17 +53,17 @@
        <a class="brand" href=""><FONT COLOR="#bd93f9">N.E.W. Furby Group</FONT></a>
        <div class="nav-collapse" id="main-menu">
         <ul class="nav" id="main-menu-left">
-          <li><a href="http://github.com/divshot/geo-bootstrap"><FONT COLOR="#bd93f9">Furbish Dictionary</FONT></a></li>
+          <li><a href="" title="Figure out what YOUR Furby™ is saying!"><FONT COLOR="#bd93f9">Furbish Dictionary</FONT></a></li>
           <li class="dropdown" id="preview-menu">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><FONT COLOR="#bd93f9">Member Bios </FONT><b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a target="_blank" href="swatch/bootstrap.min.css"><FONT COLOR="#bd93f9">Hans Nelson </FONT></a></li>
+              <li><a target="_blank" href=""><FONT COLOR="#bd93f9">Hans Nelson </FONT></a></li>
               <li class="divider"></li>
-              <li><a target="_blank" href="swatch/variables.less"><FONT COLOR="#bd93f9">Edi </FONT></a></li>
+              <li><a target="_blank" href=""><FONT COLOR="#bd93f9">Edi </FONT></a></li>
             </ul>
           </li>
-          <li><a href="http://github.com/divshot/geo-bootstrap"><FONT COLOR="#bd93f9">Mission Statement</FONT></a></li>
-          <li><a href="http://www.websitegoodies.com/guestbook.php?a=view&id=930308" target="_blank"><FONT COLOR="#bd93f9">Guestbook </FONT></a></li>
+          <li><a href="" title="What we here at N.E.W.F.E.G. are all about."><FONT COLOR="#bd93f9">Mission Statement</FONT></a></li>
+          <li><a href="http://www.websitegoodies.com/guestbook.php?a=view&id=1738909" title="Come say hi!" target="_blank"><FONT COLOR="#bd93f9">Guestbook </FONT></a></li>
         </ul>
         <ul class="nav pull-right" id="main-menu-right">
           <li><a rel="tooltip" target="_blank" href="" title="Websites we love!"><FONT COLOR="#bd93f9">Friends </FONT><i class="icon-share-alt"></i></a></li>
@@ -80,10 +80,10 @@
 ================================================== -->
 <header class="jumbotron subhead" id="overview">
   <div class="row">
-    <div>
+    <div style="text-shadow: 6px 4px black">
       <center>
-        <p><h2><FONT COLOR="#ffb86c" style="background-color: black;">&nbspWelcome to the&nbsp</FONT></p><p style="padding-top: 20px; padding-bottom: 17px;"><img class="pull-left" style="transform: scale(0.75)" src="img/FurbySpringAnim.gif"><blink><FONT COLOR="#ff79c6" style="background-color:black;"> N.</FONT><FONT COLOR="#50fa7b" style="background-color:black;">E.</FONT><FONT COLOR="#8be9fd" style="background-color:black;">W.</FONT><FONT COLOR="#bd93f9" style="background-color:black;"> Furby</FONT><FONT COLOR="#6272a4" style="background-color:black;">™ </FONT><FONT COLOR="#f1fa8c" style="background-color:black;"">Enthusiast </FONT><FONT COLOR="#ff5555" style="background-color:black;">Group </FONT></blink><img class="pull-right" style="transform: scale(-0.75, 0.75)" src="img/FurbySpringAnim.gif"></h2></p>
-        <p class="lead"><FONT COLOR="#50fa7b" style="background-color: black;">At the cutting edge of Furby™ culture</FONT></p>
+        <p><h2><FONT COLOR="#ffb86c" style="background-color: #19161b;">&nbspWelcome to the&nbsp</FONT></p><p style="padding-top: 20px; padding-bottom: 17px;"><img class="pull-left" style="transform: scale(0.75); border: 3px solid #bd93f9" src="img/FurbySpringAnim.gif"><blink><FONT COLOR="#ff79c6" style="background-color: #19161b;"> N.</FONT><FONT COLOR="#50fa7b" style="background-color: #19161b;">E.</FONT><FONT COLOR="#8be9fd" style="background-color: #19161b;">W.</FONT><FONT COLOR="#bd93f9" style="background-color: #19161b;"> Furby</FONT><FONT COLOR="#6272a4" style="background-color: #19161b;">™ </FONT><FONT COLOR="#f1fa8c" style="background-color: #19161b;"">Enthusiast </FONT><FONT COLOR="#ff5555" style="background-color: #19161b;">Group </FONT></blink><img class="pull-right" style="transform: scale(-0.75, 0.75); border: 3px solid #50fa7b"" src="img/FurbySpringAnim.gif"></h2></p>
+        <p class="lead"><FONT COLOR="#50fa7b" style="background-color: #19161b;">At the cutting edge of Furby™ culture</FONT></p>
         <br>
         <table cellpadding="2" cellspacing="2">
           <tr>
@@ -107,7 +107,7 @@
     </div>
   </div>
   <br>
-  <marquee><FONT COLOR="#bd93f9" style="background-color:black;">&nbsp;&#60;&#60;&#60; E-Mail us any time for the freshest Furby™ fashions! Subscribe to our newsletter for the latest Furby™ news! &#62;&#62;&#62;&nbsp;</FONT></marquee>
+  <marquee><FONT COLOR="#bd93f9" style="background-color: #19161b;">&nbsp;&#60;&#60;&#60; E-Mail us any time for the freshest Furby™ fashions! Subscribe to our newsletter for the latest Furby™ news! &#62;&#62;&#62;&nbsp;</FONT></marquee>
   <div class="subnav">
     <ul class="nav nav-pills">
       <li><a href="#credo">Mission Statement</a></li>
@@ -124,27 +124,32 @@
 ================================================== -->
 <section id="typography" style="padding-top: 0">
   <div class="page-header">
-    <h1>Typography</h1>
+    <h1><FONT COLOR="#bd93f9" style="background-color: #19161b; text-shadow: 4px 4px black">What <em>even is</em> a "Furby™?" </FONT></h1>
   </div>
 
   <!-- Headings & Paragraph Copy -->
   <div class="row">
 
-    <div class="span4">
+    <div class="span6">
       <div class="well">
-        <h1>h1. Heading 1</h1>
-        <h2>h2. Heading 2</h2>
-        <h3>h3. Heading 3</h3>
-        <h4>h4. Heading 4</h4>
-        <h5>h5. Heading 5</h5>
-        <h6>h6. Heading 6</h6>
+        <img style="border: 4px solid #ff5555" src="img/furbs.gif" title="photo credit: Getty Images">
       </div>
     </div>
 
-    <div class="span4">
-      <h3>Example body text</h3>
-      <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-      <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec sed odio dui.</p>
+    <div class="span6" style="text-shadow: 4px 4px black">
+      <div class="well">
+      <h3>The story of Furby™......</h3>
+      <p>Some furbys are grey, and others are white.</p>
+      <p>Some furbys are black, as black as night.</p>
+      <p>Some have tails, and others manes, but each furby has its own name, so no two furbys are the same.</p>
+      <p>Small of stature, big of heart, all furbys are so very smart.</p>
+      <p>They speak a language all their own, for furbish is a language quite unknown.</p>
+      <p>Furbys need "may-may" (love) and "may-lah" (hugs) and they "wee-tee" (sing) and "loo-loo" (joke).</p>
+      <p>They play "furby says" and "hide and seek" and into the future they can peek.</p>
+      <p>So when you take a furby home, you will never be alone.</p>
+      <p>The more you play, the more they do, furby will keep amazing you.</p>
+      <p>"Noh-lah" (dance) and "wee-tee" (sing), "e-tah/e-tah" (yea, yea), furbys have come for "u-nye" (you) and "kah" (me)!</p>
+    </div>
     </div>
 
     <div class="span4">
@@ -163,17 +168,19 @@
 
   </div>
   
-  <div class="row">
-    <div class="span6">
+  <div class="row" style="text-shadow: 6px 4px black">
+    <div class="span3, well">
       <blockquote>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+        <p>"Kah mee-mee boo-noo-loo koh</p>
+        <p> dah-boh-bay doo-moh may-lah kah."</p>
+        <small><FONT COLOR="#f1fa8c">Koh-Koh</FONT></small>
       </blockquote>
     </div>
-    <div class="span6">
-      <blockquote class="pull-right">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+    <div class="span3, well">
+      <blockquote>
+        <p>"They're just so stinking cute, I can't imagine living</p>
+        <p>without my Furby™ from TIGER® ELECTRONICS, LTD.!"</p>
+        <small><FONT COLOR="#f1fa8c">Jermoine Franklin</FONT></small>
       </blockquote>
     </div>
   </div>
@@ -195,101 +202,7 @@
   <div class="page-header">
     <h1>Navbars</h1>
   </div>
-  <div class="navbar">
-    <div class="navbar-inner">
-      <div class="container" style="width: auto;">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">Project name</a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="navbar-search pull-left" action="">
-            <input type="text" class="search-query span2" placeholder="Search">
-          </form>
-          <ul class="nav pull-right">
-            <li><a href="#">Link</a></li>
-            <li class="divider-vertical"></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.nav-collapse -->
-      </div>
-    </div><!-- /navbar-inner -->
-  </div><!-- /navbar -->
-
-  <div class="navbar navbar-inverse">
-    <div class="navbar-inner">
-      <div class="container" style="width: auto;">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">Project name</a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="navbar-search pull-left" action="">
-            <input type="text" class="search-query span2" placeholder="Search">
-          </form>
-          <ul class="nav pull-right">
-            <li><a href="#">Link</a></li>
-            <li class="divider-vertical"></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.nav-collapse -->
-      </div>
-    </div><!-- /navbar-inner -->
-  </div><!-- /navbar -->
+  
 
 </section>
 
@@ -878,7 +791,7 @@
   <center>
     <!-- hitwebcounter Code START -->
     <a href="https://www.hitwebcounter.com" target="_blank">
-    <img class="btn btn-large" style="padding-left: 4px; padding-right: 4px; padding-top: 4px; padding-bottom: 4px;" src="https://hitwebcounter.com/counter/counter.php?page=7927659&style=0005&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a> 
+    <img style="border: solid 4px #ff79c6;" src="https://hitwebcounter.com/counter/counter.php?page=7927659&style=0005&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a> 
     <hr>
     <img src="img/FURBYleftanim.gif">
     <img src="img/FURBYmidanim.gif">
