--- a/member-bios.html
+++ b/member-bios.html
@@ -77,13 +77,13 @@
                         <li><a href="mission.html#" title="What we here at N.E.W.F.E.G. are all about.">
                                 <FONT COLOR="#bd93f9">Mission Statement</FONT>
                             </a></li>
-                        <li><a target="_blank" href="http://www.websitegoodies.com/guestbook.php?a=view&id=1738909"
+                        <li><a target="_blank" href="http://www.websitegoodies.com/guestbook.php?a=view&id=1738911"
                                 title="Come say hi!" target="_blank">
                                 <FONT COLOR="#bd93f9">Guestbook </FONT>
                             </a></li>
                     </ul>
                     <ul class="nav pull-right" id="main-menu-right">
-                        <li><a rel="tooltip" target="_blank" href="links.html" title="Websites we love!">
+                        <li><a rel="tooltip" target="" href="links.html" title="Websites we love!">
                                 <FONT COLOR="#bd93f9">Friends </FONT><i class="icon-share-alt"></i>
                             </a></li>
                     </ul>
@@ -170,7 +170,8 @@
                             <strike>technology</strike> biology, he found the movements and mannerisms charming. As time
                             passed, Hans came to appreciate Furbys in a different light. He found the uncanny expression
                             adorable, and the now-antiquated <strike>technology</strike> biology of the creatures
-                            nostalgic.</p>
+                            nostalgic.
+                        </p>
                         <p>Hans resides in Sturgeon Bay, in the beautiful Door County, and grew up there. He has a
                             Bachelor's Degree in Fine Arts, and is focusing on creating relief prints from linoleum and
                             wood. Hans has displayed several prints locally to acclaim.</p>
@@ -203,7 +204,7 @@
                 </div>
                 <div class="span6">
                     <div class="well">
-                        <img style="border: 4px solid #ff5555" src="img/hans.gif" title="photo credit: Getty Images">
+                        <img style="border: 4px outset #ff5555" src="img/hans.gif" title="photo credit: Getty Images">
                         <p style="text-align: center; font-size: x-large; text-shadow: 4px 4px black"><br>Hans Nelson
                             with a goat. </p>
                         <p>
@@ -224,7 +225,7 @@
             <div class="row">
                 <div class="span6">
                     <div class="well">
-                        <img style="border: 4px solid #f1fa8c" src="img/edi.gif" title="photo credit: Getty Images">
+                        <img style="border: 4px outset #f1fa8c" src="img/edi.gif" title="photo credit: Getty Images">
                         <p style="text-align: center; font-size: x-large; text-shadow: 4px 4px black"><br>Edi laying her
                             head on Hans' lap. </p>
                         <p>
@@ -266,9 +267,9 @@
         <br><br>
         <center>
             <!-- TRIPLE MC HAMMER -->
-            <img style="transform: scale(-0.65, 0.65); border: 4px solid #ff5555" src="img/furbyani.gif">&nbsp;
-            <img style="transform: scale(0.65); border: 4px solid #6272a4" src="img/furbyani.gif">&nbsp;
-            <img style="transform: scale(-0.65, 0.65); border: 4px solid #50fa7b" src="img/furbyani.gif">
+            <img style="transform: scale(-0.65, 0.65); border: 4px outset #ff5555" src="img/furbyani.gif">&nbsp;
+            <img style="transform: scale(0.65); border: 4px outset #6272a4" src="img/furbyani.gif">&nbsp;
+            <img style="transform: scale(-0.65, 0.65); border: 4px outset #50fa7b" src="img/furbyani.gif">
         </center>
 
         <br><br><br><br>
@@ -280,7 +281,7 @@
             <!-- hitwebcounter Code START -->
             <a href="https://www.hitwebcounter.com" target="_blank">
                 <img style="border: solid 4px #ff79c6;"
-                    src="https://hitwebcounter.com/counter/counter.php?page=7927659&style=0005&nbdigits=6&type=page&initCount=0"
+                    src="https://hitwebcounter.com/counter/counter.php?page=7928056&style=0005&nbdigits=6&type=ip&initCount=0"
                     title="Free Counter" Alt="web counter" border="0" /></a>
             <hr>
             <img src="img/FURBYleftanim.gif">
