all-pages-formatting

--- a/links.html
+++ b/links.html
@@ -100,16 +100,33 @@
         <header class="jumbotron subhead" id="overview">
             <div class="row">
                 <div style="text-shadow: 6px 4px black">
-                    
+
                     <center>
                         <br>
-                        <p><h2><a href="http://www.hsnelson.com" target="_blank"><FONT style="background-color: #19161b;">&nbsp;Art by Chairman Hans Nelson&nbsp;</FONT></a></h2></p>
+                        <p>
+                        <h2><a href="http://www.hsnelson.com" target="_blank">
+                                <FONT style="background-color: #19161b;">&nbsp;Art by Chairman Hans Nelson&nbsp;</FONT>
+                            </a></h2>
+                        </p>
                         <br>
-                        <p><h2><a href="https://discord.gg/C8PUjg7KSX" target="_blank"><FONT style="background-color: #19161b;">&nbsp;N.E.W. Furby Enthusiast Group Discord&nbsp;</FONT></a></h2></p>
+                        <p>
+                        <h2><a href="https://discord.gg/C8PUjg7KSX" target="_blank">
+                                <FONT style="background-color: #19161b;">&nbsp;N.E.W. Furby Enthusiast Group
+                                    Discord&nbsp;</FONT>
+                            </a></h2>
+                        </p>
                         <br>
-                        <p><h2><a href="https://github.com/divshot/geo-bootstrap" target="_blank"><FONT style="background-color: #19161b;">&nbsp;GEO Bootstrap&nbsp;</FONT></a></h2></p>
+                        <p>
+                        <h2><a href="https://github.com/divshot/geo-bootstrap" target="_blank">
+                                <FONT style="background-color: #19161b;">&nbsp;GEO Bootstrap&nbsp;</FONT>
+                            </a></h2>
+                        </p>
                         <br>
-                        <p><h2><a href="https://www.homestarrunner.com" target="_blank"><FONT style="background-color: #19161b;">&nbsp;www.homestarrunner.com&nbsp;</FONT></a></h2></p>
+                        <p>
+                        <h2><a href="https://www.homestarrunner.com" target="_blank">
+                                <FONT style="background-color: #19161b;">&nbsp;www.homestarrunner.com&nbsp;</FONT>
+                            </a></h2>
+                        </p>
                         <br>
                     </center>
                 </div>
