--- a/mission.html
+++ b/mission.html
@@ -152,7 +152,8 @@
 
             <div class="page-header">
                 <h1>
-                    <FONT COLOR="#bd93f9" style="background-color: #19161b; text-shadow: 4px 4px black"><em>&nbsp;Our Mission...&nbsp;</em></FONT>
+                    <FONT COLOR="#bd93f9" style="background-color: #19161b; text-shadow: 4px 4px black"><em>&nbsp;Our
+                            Mission...&nbsp;</em></FONT>
                 </h1>
             </div>
 
@@ -161,18 +162,30 @@
                 <div class="span7" style="text-shadow: 4px 4px black">
                     <div class="well">
                         <h3>We at Northeast Wisconsin Furby Enthusiast Group</h3>
-                        <p>Strive to ride the bleeding edge of all furby news, culture, fashion, and trends, while also retaining a sense of tradition and nostalgia, preservation and appreciation for all things Furby™.</p>
-                        <p>Since their release in 1998, Furby™ has captivated people worldwide. Through our shared experience of waking up our first Furby™, we have a renewed kinship among mankind. Through Furby™ we can re-discover ourselves.</p>
-                        <p>Whether you like their adorable looks, or you find them well within the uncanny valley, whether you find their baby-speak charming, or find it grating, our organization welcomes all kinds of Furby™ owners and appreciators alike.</p>
-                        <p>Membership is free. Below, you will find a printable membership card so you too can become a certified, card-carrying member of the Northeast Wisconsin Furby Enthusiast Group!</p>
-                        <p>We also have a newly-created Discord server located <a href="https://discord.gg/C8PUjg7KSX" target="_blank" title="NEWFEG Discord Server"><FONT COLOR="#bd93f9">here.</FONT></a></p>
+                        <p>Strive to ride the bleeding edge of all furby news, culture, fashion, and trends, while also
+                            retaining a sense of tradition and nostalgia, preservation and appreciation for all things
+                            Furby™.</p>
+                        <p>Since their release in 1998, Furby™ has captivated people worldwide. Through our shared
+                            experience of waking up our first Furby™, we have a renewed kinship among mankind. Through
+                            Furby™ we can re-discover ourselves.</p>
+                        <p>Whether you like their adorable looks, or you find them well within the uncanny valley,
+                            whether you find their baby-speak charming, or find it grating, our organization welcomes
+                            all kinds of Furby™ owners and appreciators alike.</p>
+                        <p>Membership is free. Below, you will find a printable membership card so you too can become a
+                            certified, card-carrying member of the Northeast Wisconsin Furby Enthusiast Group!</p>
+                        <p>We also have a newly-created Discord server located <a href="https://discord.gg/C8PUjg7KSX"
+                                target="_blank" title="NEWFEG Discord Server">
+                                <FONT COLOR="#bd93f9">here.</FONT>
+                            </a></p>
                         <p>Come, join us in your love for all things Furby™ and Furbish!</p>
                         <p style="margin-left: 40px; margin-right: 40px;">
-                            <FONT COLOR="50fa7b"><b>▶ </b>DID YOU KNOW?: The Door COunty Chapter was the first of the Northeast Wisconsin Furby™ Enthusiast Chapters!</FONT>
+                            <FONT COLOR="50fa7b"><b>▶ </b>DID YOU KNOW?: The Door COunty Chapter was the first of the
+                                Northeast Wisconsin Furby™ Enthusiast Chapters!</FONT>
                         </p>
                         <hr>
                         <p>
-                            <FONT COLOR="#ff79c6" style="background-color: #19161b;"><b>Ah-mah ee-day, noo-loo, koo-doh boh-dah!</b></FONT>
+                            <FONT COLOR="#ff79c6" style="background-color: #19161b;"><b>Ah-mah ee-day, noo-loo, koo-doh
+                                    boh-dah!</b></FONT>
                         </p>
                         <hr>
                         <blockquote>
@@ -182,9 +195,17 @@
                             </small>
                         </blockquote>
                         <hr>
-                        <a href="img/CARD.jpg" target="_blank" title="Print and laminate me!"><img src="img/card.jpg"></a>
+                        <a href="img/CARD.jpg" target="_blank" title="Print and laminate me!"><img
+                                src="img/card.jpg"></a>
                         <br>
-                        <p><center><a href="img/CARD.jpg"target="_blank" title="Print and laminate me!"><blink>⇑</blink><img src="img/clickhere.gif"><blink>⇑</blink>&nbsp;<img src="img/Print.gif">&nbsp;PRINT & LAMINATE ME!&nbsp;<img src="img/Print.gif">&nbsp;<blink>⇑</blink><img src="img/clickhere.gif"><blink>⇑</blink></b></a></center></p>
+                        <p>
+                            <center><a href="img/CARD.jpg" target="_blank" title="Print and laminate me!">
+                                    <blink>⇑</blink><img src="img/clickhere.gif">
+                                    <blink>⇑</blink>&nbsp;<img src="img/Print.gif">&nbsp;PRINT & LAMINATE ME!&nbsp;<img
+                                        src="img/Print.gif">&nbsp;<blink>⇑</blink><img src="img/clickhere.gif">
+                                    <blink>⇑</blink></b>
+                                </a></center>
+                        </p>
                     </div>
                 </div>
                 <div class="span5">
@@ -192,9 +213,10 @@
                         <img style="border: 4px outset #8be9fd" src="img/furby-lg.gif">
                     </div>
                 </div>
-                <center><img class="" style="transform: scale(1); border: 4px outset #ff5555" src="img/philfurby.gif"></center>
+                <center><img class="" style="transform: scale(1); border: 4px outset #ff5555" src="img/philfurby.gif">
+                </center>
             </div>
-            
+
 
 
 
