--- a/source.html
+++ b/source.html
@@ -97,90 +97,93 @@
 
         <!-- Masthead
 ================================================== -->
-<div>
-    <center>
-        <br>
-        <h2>
-            <p>
-                <FONT COLOR="#8be9fd" style="background-color: #19161b;">&nbsp;<strike> Furby Sourcecode </strike>&nbsp;</FONT>
-            </p>
-        </h2>
-        </center>
+        <div>
+            <center>
+                <br>
+                <h2>
+                    <p>
+                        <FONT COLOR="#8be9fd" style="background-color: #19161b;">&nbsp;<strike> Furby Sourcecode
+                            </strike>&nbsp;</FONT>
+                    </p>
+                </h2>
+            </center>
         </div>
 
 
         <br><br><br>
-            <center><a class="btn btn-large" target="_blank" title="Please don't click." href="https://github.com/gnomon-/furby-source"><img style="border: 4px outset black" src="img/c-d.gif"></a></center>
-            <br><br><br>
-            <marquee>
-                <FONT COLOR="#bd93f9" style="background-color: #19161b;">&nbsp;&#60;&#60;&#60; E-Mail us any time for
-                    the freshest Furby™ fashions! Subscribe to our newsletter for the latest Furby™ news!
-                    &#62;&#62;&#62;&nbsp;</FONT>
-            </marquee>
-            <div class="subnav">
-                <ul class="nav nav-pills">
-                    <li><a href="mission.html">Mission Statement</a></li>
-                    <li><a href="furbish.html" dah-ee-tah!"><img class="pull-left" style="margin-top: -5px"
-                                src="img/test/hot.gif"> Furbish finally decoded? <img class="pull-right"
-                                style="margin-top: -5px" src="img/test/hot.gif"></a></li>
-                    <li><a href="source.html" title="Taken down by TIGER® ELECTRONICS, LTD."><strike> Leaked Furby™
-                                sourcecode </strike></a></li>
-                    <li><a href="c-d.html" title="We are required by law to display this on the site.">
-                            <FONT style="font-size:6pt">Cease & Desist from TIGER® ELECTRONICS, LTD.</FONT>
-                        </a></li>
-                    <li><a href="member-bios.html"> Member Bios</a></li>
-                    <li><a href="store.html"><img class="pull-left" style="margin-top: -3px" src="img/test/new.gif">
-                            Store &nbsp;</a></li>
-                </ul>
-            
+        <center><a class="btn btn-large" target="_blank" title="Please don't click."
+                href="https://github.com/gnomon-/furby-source"><img style="border: 4px outset black"
+                    src="img/c-d.gif"></a></center>
         <br><br><br>
-        <center>
-            <!-- TRIPLE MC HAMMER -->
-            <img style="transform: scale(-0.65, 0.65); border: 4px outset #ff5555" src="img/furbyani.gif">&nbsp;
-            <img style="transform: scale(0.65); border: 4px outset #6272a4" src="img/furbyani.gif">&nbsp;
-            <img style="transform: scale(-0.65, 0.65); border: 4px outset #50fa7b" src="img/furbyani.gif">
-        </center>
-        <!-- Footer
+        <marquee>
+            <FONT COLOR="#bd93f9" style="background-color: #19161b;">&nbsp;&#60;&#60;&#60; E-Mail us any time for
+                the freshest Furby™ fashions! Subscribe to our newsletter for the latest Furby™ news!
+                &#62;&#62;&#62;&nbsp;</FONT>
+        </marquee>
+        <div class="subnav">
+            <ul class="nav nav-pills">
+                <li><a href="mission.html">Mission Statement</a></li>
+                <li><a href="furbish.html" dah-ee-tah!"><img class="pull-left" style="margin-top: -5px"
+                            src="img/test/hot.gif"> Furbish finally decoded? <img class="pull-right"
+                            style="margin-top: -5px" src="img/test/hot.gif"></a></li>
+                <li><a href="source.html" title="Taken down by TIGER® ELECTRONICS, LTD."><strike> Leaked Furby™
+                            sourcecode </strike></a></li>
+                <li><a href="c-d.html" title="We are required by law to display this on the site.">
+                        <FONT style="font-size:6pt">Cease & Desist from TIGER® ELECTRONICS, LTD.</FONT>
+                    </a></li>
+                <li><a href="member-bios.html"> Member Bios</a></li>
+                <li><a href="store.html"><img class="pull-left" style="margin-top: -3px" src="img/test/new.gif">
+                        Store &nbsp;</a></li>
+            </ul>
+
+            <br><br><br>
+            <center>
+                <!-- TRIPLE MC HAMMER -->
+                <img style="transform: scale(-0.65, 0.65); border: 4px outset #ff5555" src="img/furbyani.gif">&nbsp;
+                <img style="transform: scale(0.65); border: 4px outset #6272a4" src="img/furbyani.gif">&nbsp;
+                <img style="transform: scale(-0.65, 0.65); border: 4px outset #50fa7b" src="img/furbyani.gif">
+            </center>
+            <!-- Footer
       ================================================== -->
 
-        <center>
-            <!-- hitwebcounter Code START -->
-            <a href="https://www.hitwebcounter.com" target="_blank">
-                <img style="border: solid 4px #ff79c6;"
-                    src="https://hitwebcounter.com/counter/counter.php?page=7928056&style=0005&nbdigits=6&type=ip&initCount=0"
-                    title="Free Counter" Alt="web counter" border="0" /></a>
-            <hr>
-            <img src="img/FURBYleftanim.gif">
-            <img src="img/FURBYmidanim.gif">
-            <img src="img/FURBYrightanim.gif">
-            <p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
-            <p class="pull-right" style="margin-top: -14px"><img src="img/test/hacker.gif">&nbsp; Built with <a
-                    href="http://bootswatch.com">Bootswatch</a></p>
-        </center>
+            <center>
+                <!-- hitwebcounter Code START -->
+                <a href="https://www.hitwebcounter.com" target="_blank">
+                    <img style="border: solid 4px #ff79c6;"
+                        src="https://hitwebcounter.com/counter/counter.php?page=7928056&style=0005&nbdigits=6&type=ip&initCount=0"
+                        title="Free Counter" Alt="web counter" border="0" /></a>
+                <hr>
+                <img src="img/FURBYleftanim.gif">
+                <img src="img/FURBYmidanim.gif">
+                <img src="img/FURBYrightanim.gif">
+                <p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
+                <p class="pull-right" style="margin-top: -14px"><img src="img/test/hacker.gif">&nbsp; Built with <a
+                        href="http://bootswatch.com">Bootswatch</a></p>
+            </center>
 
-    </div><!-- /container -->
+        </div><!-- /container -->
 
 
 
-    <!-- Le javascript
+        <!-- Le javascript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="bootstrap/docs/assets/js/jquery.js"></script>
-    <script src="bootstrap/docs/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-transition.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-alert.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-modal.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-dropdown.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-tab.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-tooltip.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-popover.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-button.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-collapse.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-carousel.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-typeahead.js"></script>
-    <script src="bootstrap/docs/assets/js/bootstrap-affix.js"></script>
-    <script src="bootswatch.js"></script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="bootstrap/docs/assets/js/jquery.js"></script>
+        <script src="bootstrap/docs/assets/js/google-code-prettify/prettify.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-transition.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-alert.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-modal.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-dropdown.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-scrollspy.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-tab.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-tooltip.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-popover.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-button.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-collapse.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-carousel.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-typeahead.js"></script>
+        <script src="bootstrap/docs/assets/js/bootstrap-affix.js"></script>
+        <script src="bootswatch.js"></script>
 
 
 </body>
