--- a/links.html
+++ b/links.html
@@ -105,7 +105,7 @@
                         <br>
                         <p>
                         <h2><a href="http://www.hsnelson.com" target="_blank">
-                                <FONT style="background-color: #19161b;">&nbsp;Art by Chairman Hans Nelson&nbsp;</FONT>
+                                <FONT style="background-color: #19161b;">&nbsp;Art by Hans Nelson&nbsp;</FONT>
                             </a></h2>
                         </p>
                         <br>
