--- a/member-bios.html
+++ b/member-bios.html
@@ -245,6 +245,8 @@
                                 cattle dog (father). Regardless, she is 100% cute!!</p>
                             <p>Edi is fairly well-behaved and spends most of her day sleeping or barking at passers-by.
                             </p>
+                            <p>Edi doesn't know what a Furby™ is, but in a way she is Hans' most important Furby™. She even has big ears like one!
+                            </p>
                         </FONT>
                         <p style="margin-left: 40px; margin-right: 40px;">
                             <FONT COLOR="50fa7b"><b>▶ </b>TRIVIA: Edi's best friend is Helka, Hans' sister's dog.</FONT>
