--- a/c-d.html
+++ b/c-d.html
@@ -116,17 +116,17 @@
         </marquee>
         <div class="subnav">
             <ul class="nav nav-pills">
-                <li><a href="mission.html">Mission Statement</a></li>
-                <li><a href="furbish.html" dah-ee-tah!"><img class="pull-left" style="margin-top: -5px"
+                <li><a href="mission.html#">Mission Statement</a></li>
+                <li><a href="member-bios.html#"> Member Bios</a></li>
+                <li><a href="furbish.html#" title="dah-ee-tah!"><img class="pull-left" style="margin-top: -5px"
                             src="img/test/hot.gif"> Furbish finally decoded? <img class="pull-right"
                             style="margin-top: -5px" src="img/test/hot.gif"></a></li>
-                <li><a href="source.html" title="Taken down by TIGER® ELECTRONICS, LTD."><strike> Leaked Furby™
+                <li><a href="source.html#" title="Taken down by TIGER® ELECTRONICS, LTD."><strike> Leaked Furby™
                             sourcecode </strike></a></li>
-                <li><a href="c-d.html" title="We are required by law to display this on the site.">
+                <li><a href="c-d.html#" title="We are required by law to display this on the site.">
                         <FONT style="font-size:6pt">Cease & Desist from TIGER® ELECTRONICS, LTD.</FONT>
                     </a></li>
-                <li><a href="member-bios.html"> Member Bios</a></li>
-                <li><a href="store.html"><img class="pull-left" style="margin-top: -3px" src="img/test/new.gif">
+                <li><a href="store.html#"><img class="pull-left" style="margin-top: -3px" src="img/test/new.gif">
                         Store &nbsp;</a></li>
             </ul>
 
