--- a/member-bios.html
+++ b/member-bios.html
@@ -130,7 +130,8 @@
             <div class="subnav">
                 <ul class="nav nav-pills">
                     <li><a href="mission.html#">Mission Statement</a></li>
-                    <li><a href="furbish.html#" dah-ee-tah!"><img class="pull-left" style="margin-top: -5px"
+                    <li><a href="member-bios.html#"> Member Bios</a></li>
+                    <li><a href="furbish.html#" title="dah-ee-tah!"><img class="pull-left" style="margin-top: -5px"
                                 src="img/test/hot.gif"> Furbish finally decoded? <img class="pull-right"
                                 style="margin-top: -5px" src="img/test/hot.gif"></a></li>
                     <li><a href="source.html#" title="Taken down by TIGER® ELECTRONICS, LTD."><strike> Leaked Furby™
@@ -138,7 +139,6 @@
                     <li><a href="c-d.html#" title="We are required by law to display this on the site.">
                             <FONT style="font-size:6pt">Cease & Desist from TIGER® ELECTRONICS, LTD.</FONT>
                         </a></li>
-                    <li><a href="member-bios.html#"> Member Bios</a></li>
                     <li><a href="store.html#"><img class="pull-left" style="margin-top: -3px" src="img/test/new.gif">
                             Store &nbsp;</a></li>
                 </ul>
@@ -245,7 +245,8 @@
                                 cattle dog (father). Regardless, she is 100% cute!!</p>
                             <p>Edi is fairly well-behaved and spends most of her day sleeping or barking at passers-by.
                             </p>
-                            <p>Edi doesn't know what a Furby™ is, but in a way she is Hans' most important Furby™. She even has big ears like one!
+                            <p>Edi doesn't know what a Furby™ is, but in a way she is Hans' most important Furby™. She
+                                even has big ears like one!
                             </p>
                         </FONT>
                         <p style="margin-left: 40px; margin-right: 40px;">
