--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Geo for Bootstrap, a Timeless Theme by Divshot</title>
+  <link rel="shortcut icon" type="img/furby-ico.png" href="favicon.ico">
+  <title>Northeast Wisconsin Furby Enthusiast Group</title>
   <center>
     <img style="transform: scaleX(1); border: 2px solid #f1fa8c" src="img/furbyANIMADO.gif">&nbsp;&nbsp;</img>
     <a class="btn btn-large" href="index.html#"><img src="img/logo-2.jpg"
