--- a/store.html
+++ b/store.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="img/furby-ico.png" href="favicon.ico">
     <title>Northeast Wisconsin Furby Enthusiast Group</title>
     <center>
         <img style="transform: scaleX(1); border: 2px solid #f1fa8c" src="img/furbyANIMADO.gif">&nbsp;&nbsp;</img>
