--- a/mission.html
+++ b/mission.html
@@ -200,7 +200,7 @@
                                 src="img/card.jpg"></a>
                         <br>
                         <p>
-                            <center><a href="img/CARD.jpg" target="_blank" title="Print and laminate me!">
+                            <center><a src="img/CARD.jpg" target="_blank" title="Print and laminate me!">
                                     <blink>⇑</blink><img src="img/clickhere.gif">
                                     <blink>⇑</blink>&nbsp;<img src="img/Print.gif">&nbsp;PRINT & LAMINATE ME!&nbsp;<img
                                         src="img/Print.gif">&nbsp;<blink>⇑</blink><img src="img/clickhere.gif">
