--- a/mission.html
+++ b/mission.html
@@ -197,15 +197,16 @@
                         </blockquote>
                         <hr>
                         <a href="img/CARD.jpg" target="_blank" title="Print and laminate me!"><img
-                                src="img/card.jpg"></a>
+                                src="img/CARD.jpg"></a>
                         <br>
                         <p>
-                            <center><a src="img/CARD.jpg" target="_blank" title="Print and laminate me!">
-                                    <blink>⇑</blink><img src="img/clickhere.gif">
-                                    <blink>⇑</blink>&nbsp;<img src="img/Print.gif">&nbsp;PRINT & LAMINATE ME!&nbsp;<img
-                                        src="img/Print.gif">&nbsp;<blink>⇑</blink><img src="img/clickhere.gif">
-                                    <blink>⇑</blink></b>
-                                </a></center>
+                            <center>
+                                <blink>⇑</blink><img src="img/clickhere.gif">
+                                <blink>⇑</blink>&nbsp;<img src="img/Print.gif">&nbsp;PRINT & LAMINATE ME!&nbsp;<img
+                                    src="img/Print.gif">&nbsp;<blink>⇑</blink><img src="img/clickhere.gif">
+                                <blink>⇑</blink></b>
+                                </a>
+                            </center>
                         </p>
                     </div>
                 </div>
