--- a/member-bios.html
+++ b/member-bios.html
@@ -284,8 +284,7 @@
         <center>
             <!-- hitwebcounter Code START -->
             <a href="https://www.hitwebcounter.com" target="_blank">
-                <img style="border: solid 4px #ff79c6;"
-                    src="https://hitwebcounter.com/counter/counter.php?page=7928056&style=0005&nbdigits=6&type=ip&initCount=0"
+                <img src="https://hitwebcounter.com/counter/counter.php?page=7928356&style=0005&nbdigits=6&type=ip&initCount=0"
                     title="Free Counter" Alt="web counter" border="0" /></a>
             <hr>
             <img src="img/FURBYleftanim.gif">
