--- a/mission.html
+++ b/mission.html
@@ -240,7 +240,8 @@
         <center>
             <!-- hitwebcounter Code START -->
             <a href="https://www.hitwebcounter.com" target="_blank">
-                <img src="https://hitwebcounter.com/counter/counter.php?page=7928356&style=0005&nbdigits=6&type=ip&initCount=0"
+                <img style="border: solid 4px #ff79c6;"
+                    src="https://hitwebcounter.com/counter/counter.php?page=7928359&style=0005&nbdigits=6&type=page&initCount=0"
                     title="Free Counter" Alt="web counter" border="0" /></a>
             <hr>
             <img src="img/FURBYleftanim.gif">
