--- a/furbish.html
+++ b/furbish.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="favicon.ico" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Northeast Wisconsin Furby Enthusiast Group</title>
     <center>
         <img style="transform: scaleX(1); border: 2px solid #f1fa8c" src="img/furbyANIMADO.gif">&nbsp;&nbsp;</img>
