--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
               <p style="padding-top: 20px; padding-bottom: 17px;"><img class="pull-left"
                   style="transform: scale(0.75); border: 3px solid #bd93f9" src="img/FurbySpringAnim.gif">
                 <blink>
-                  <FONT COLOR="#ff79c6" style="background-color: #19161b;"> N.</FONT>
-                  <FONT COLOR="#50fa7b" style="background-color: #19161b;">E.</FONT>
-                  <FONT COLOR="#8be9fd" style="background-color: #19161b;">W.</FONT>
-                  <FONT COLOR="#bd93f9" style="background-color: #19161b;"> Furby</FONT>
-                  <FONT COLOR="#6272a4" style="background-color: #19161b;">™ </FONT>
-                  <FONT COLOR="#f1fa8c" style="background-color: #19161b;"">Enthusiast </FONT><FONT COLOR=" #ff5555"
+                  <FONT COLOR="#ff79c6" style="background-color: #19161b;">&nbsp;N.&nbsp;</FONT>
+                  <FONT COLOR="#50fa7b" style="background-color: #19161b;">E.&nbsp;</FONT>
+                  <FONT COLOR="#8be9fd" style="background-color: #19161b;">W.&nbsp;</FONT>
+                  <FONT COLOR="#bd93f9" style="background-color: #19161b;">&nbsp;Furby</FONT>
+                  <FONT COLOR="#6272a4" style="background-color: #19161b;">™&nbsp;</FONT>
+                  <FONT COLOR="#f1fa8c" style="background-color: #19161b;">Enthusiast&nbsp;</FONT><FONT COLOR=" #ff5555"
                     style="background-color: #19161b;">Group </FONT>
                 </blink><img class="pull-right" style="transform: scale(-0.75, 0.75); border: 3px solid #50fa7b"" src="
                   img/FurbySpringAnim.gif">
