--- a/mission.html
+++ b/mission.html
@@ -180,7 +180,7 @@
                             </a></p>
                         <p>Come, join us in your love for all things Furby™ and Furbish!</p>
                         <p style="margin-left: 40px; margin-right: 40px;">
-                            <FONT COLOR="50fa7b"><b>▶ </b>DID YOU KNOW?: The Door COunty Chapter was the first of the
+                            <FONT COLOR="50fa7b"><b>▶ </b>DID YOU KNOW?: The Door County Chapter was the first of the
                                 Northeast Wisconsin Furby™ Enthusiast Chapters!</FONT>
                         </p>
                         <hr>
