--- a/c-d.html
+++ b/c-d.html
@@ -101,10 +101,14 @@
         <br><br><br>
         <center>
             <p>
-            <h2>We are legally required to display</h2>
+                <FONT COLOR="#ffb86c" style="background-color: #19161b;">
+                    <h2>&nbsp;We are legally required to display&nbsp;</h2>
+                </FONT>
             </p>
             <p>
-            <h2>this document on our website.</h2>
+                <FONT COLOR="#ffb86c" style="background-color: #19161b;">
+                    <h2>&nbsp;this document on our website&nbsp;</h2>
+                </FONT>
             </p>
             <br>
             <img style="border: 4px outset #ff5555" src="img/c-d.gif">
