--- a/store.html
+++ b/store.html
@@ -13,7 +13,7 @@
         &nbsp;&nbsp;<img style="transform: scaleX(-1); border: 2px solid #8be9fd" src="img/furbyANIMADO.gif"></img>
     </center>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A timeless theme for Twitter Bootstrap.">
+    <meta name="description" content="The portal to the latest Furby™ news in the 920!">
     <meta name="author" content="Divshot, Inc.">
 
     <!--[if lt IE 9]>
