--- a/store.html
+++ b/store.html
@@ -164,20 +164,20 @@
         <!-- Footer
       ================================================== -->
 
-        <center>
-            <!-- hitwebcounter Code START -->
-            <a href="https://www.hitwebcounter.com" target="_blank">
-                <img style="border: solid 4px #ff79c6;"
-                    src="https://hitwebcounter.com/counter/counter.php?page=7928371&style=0005&nbdigits=6&type=ip&initCount=0"
-                    title="Free Counter" Alt="web counter" border="0" /></a>
-            <hr>
-            <img src="img/FURBYleftanim.gif">
-            <img src="img/FURBYmidanim.gif">
-            <img src="img/FURBYrightanim.gif">
-            <p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
-            <p class="pull-right" style="margin-top: -14px"><img src="img/test/hacker.gif">&nbsp; Built with <a
-                    href="http://bootswatch.com">Bootswatch</a></p>
-        </center>
+      <center>
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+          <img style="border: solid 4px #ff79c6;"
+            src="https://hitwebcounter.com/counter/counter.php?page=7928371&style=0005&nbdigits=6&type=ip&initCount=0"
+            title="Free Counter" Alt="web counter" border="0" /></a>
+        <hr>
+        <img src="img/FURBYleftanim.gif"><img src="img/FURBYmidanim.gif"><img src="img/FURBYrightanim.gif">
+        <p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
+        <p class="pull-right" style="margin-top: -14px"><img src="img/test/hacker.gif">&nbsp; Built with <a
+            href="http://bootswatch.com">Bootswatch</a></p>
+            <p><FONT COLOR="#ff79c6" style="background: #19161b; opacity: 0.5;">Hee-hee-hee, you found me! Comment "I found you!" on the guestbook! Hee-hee-hee.</FONT></p>
+            <br>
+      </center>
 
     </div><!-- /container -->
 
