--- a/member-bios.html
+++ b/member-bios.html
@@ -289,7 +289,7 @@
             title="Free Counter" Alt="web counter" border="0" /></a>
         <hr>
         <img src="img/FURBYleftanim.gif"><img src="img/FURBYmidanim.gif"><img src="img/FURBYrightanim.gif">
-        <p class="pull-left" style="margin-top: -14px"><img src="img/test/geocities.jpg"></p>
+        <p class="pull-left" style="margin-top: -14px"><img src="img/americanflag.gif">&nbsp;<img src="img/wisconsinflag-1.gif"></p>
         <p class="pull-right" style="margin-top: -14px"><img src="img/test/hacker.gif">&nbsp; Built with <a
             href="http://bootswatch.com">Bootswatch</a></p>
             <p><FONT COLOR="#ff79c6" style="background: #19161b; opacity: 0.5;">Hee-hee-hee, you found me! Comment "I found you!" on the guestbook! Hee-hee-hee.</FONT></p>
