--- a/member-bios.html
+++ b/member-bios.html
@@ -197,8 +197,7 @@
                         <hr>
                         <address>
                             <h3>
-                                <center><a href="mailto:hans@hsnelson.com"><img
-                                            src="img/email.gif">hans@hsnelson.com</a></center>
+                                <center><a href="mailto:hans@hsnelson.com"><img src="img/email04.gif">hans@hsnelson.com</a></center>
                             </h3>
                         </address>
                     </div>
