photo-attribution-fix

--- a/member-bios.html
+++ b/member-bios.html
@@ -179,7 +179,7 @@
                         <p>While Hans has yet to create a Furby™-centric print, who knows what the future holds? :)</p>
                         <p style="margin-left: 40px; margin-right: 40px;">
                             <FONT COLOR="50fa7b"><b>▶ </b>TRIVIA: Hans' first Furby™ was a grey spotted Furby™ named
-                                Koh-Koh.</FONT>
+                                Koh-Koh, which he 'inherited' from his sister.</FONT>
                         </p>
                         <hr>
                         <p>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="span6">
                     <div class="well">
-                        <img style="border: 4px outset #ff5555" src="img/hans.gif" title="photo credit: Getty Images">
+                        <img style="border: 4px outset #ff5555" src="img/hans.gif" title="photo credit: Hans Nelson">
                         <p style="text-align: center; font-size: x-large; text-shadow: 4px 4px black"><br>Hans Nelson
                             with a goat. </p>
                         <p>
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="span6">
                     <div class="well">
-                        <img style="border: 4px outset #f1fa8c" src="img/edi.gif" title="photo credit: Getty Images">
+                        <img style="border: 4px outset #f1fa8c" src="img/edi.gif" title="photo credit: Hans Nelson">
                         <p style="text-align: center; font-size: x-large; text-shadow: 4px 4px black"><br>Edi laying her
                             head on Hans' lap. </p>
                         <p>
