--- a/source.html
+++ b/source.html
@@ -3,6 +3,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9X4YBTBCYB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9X4YBTBCYB');
+    </script>
     <meta charset="utf-8">
     <title>Northeast Wisconsin Furby Enthusiast Group</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
